Shifted BooksAPI call to Backend

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,2 @@
 ATLAS_URI=mongodb+srv://awanikhodwe:vlPRKNWhgPn4SqxF@cluster0.pyjeoaq.mongodb.net/?retryWrites=true&w=majority
+BooksAPI = "AIzaSyA1gjFZSeZUs6XAjzJt3TP3GRRFaHsgzSs"
