--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+REACT_APP_API_URL=http://localhost:5000
 ATLAS_URI=mongodb+srv://awanikhodwe:vlPRKNWhgPn4SqxF@cluster0.pyjeoaq.mongodb.net/?retryWrites=true&w=majority
 BooksAPI = "AIzaSyA1gjFZSeZUs6XAjzJt3TP3GRRFaHsgzSs"
